tests/unit/language/errors/alloc_uninitialized_error.arche
// RUN: %arche build -o %t %s > /dev/null 2>&1 && ! %t 2>&1
// Uninitialized alloc has count=0, accessing any row should error
#import { fmt }
Counter :: arche { val :: int }

[5]Counter;

main :: proc() {
  x := Counter.val[0];
  fmt.printf("should not reach\n");
}
